--- a/style.css
+++ b/style.css
@@ -6,7 +6,6 @@ body {
     max-height: 60px;
     color: white;
     background-color:rgb(43, 201, 201);
-    margin-left: 25px;
     padding: absolute; 
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-weight: bold;
@@ -44,9 +43,18 @@ a.navbar-brand {
     margin: 20 px
 }
 
+}.content{
+    padding-top: 50px;
+    padding-bottom: 80px;
+    overflow: hidden;
+}
+.content.bg-white{
+    margin-top: 15px;
+}
+
 .page-footer{
     background-color: lightgrey;
-    margin-top: 30px;
+    margin-top: 50px;
     align: "center";
     position: fixed;
     bottom: 0;
@@ -69,10 +77,22 @@ h3{
     border: none;
 }
 
+.col-md-7{
+    background-color: white;
+    padding-top: 20px;
+    padding-bottom: 40px;
+}
+
 .p {
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: large;
     padding: 10 px;
+}
+
+.col-md-4{
+    background-color: white;
+    padding-top: 20px;
+    padding-bottom: 40px;
 }
 
 @media (min-width: 0px) and (max-width: 767px) {
@@ -82,7 +102,7 @@ h3{
     }
 
     .navbar-collapse{
-        background-color:  white;
+        background-color: white;
     }
     .navbar{
         padding:inherit;
